src-ken&y/objects/Claim_Line__c.object
<CustomObject>
    <customHelpPage>HelpClaims</customHelpPage>
    <description>Provides additional information about the claim and how it should be settled.</description>
    <fields>
        <fullName>Accounting_Default__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Default</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Claim Lines</relationshipLabel>
        <relationshipName>Claim_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Claim Lines</relationshipLabel>
        <relationshipName>Claim_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Claim__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Invoice Line</label>
        <referenceTo>Customer_Invoice_Line__c</referenceTo>
        <relationshipLabel>Claim Lines</relationshipLabel>
        <relationshipName>Claim_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Invoice</label>
        <referenceTo>Customer_Invoice__c</referenceTo>
        <relationshipLabel>Claim Lines</relationshipLabel>
        <relationshipName>Claim_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <description>Stores the number of currently unresolved exceptions on this record.</description>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>Indicates if the record has exceptions that need to be resolved.</description>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Claim Lines</relationshipLabel>
        <relationshipName>Claim_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The reason code for this line. Specifies why the claim is being made.</inlineHelpText>
        <label>Reason Code</label>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Claim Lines</relationshipLabel>
        <relationshipName>Claim_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reason_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Resolution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Claim Lines (Resolution Code)</relationshipLabel>
        <relationshipName>Resolution_Claim_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Claim Lines</relationshipLabel>
        <relationshipName>Claim_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settling_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will be populated when a claim is settled against other claims.</inlineHelpText>
        <label>Settling Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Claim Lines (Settling Claim)</relationshipLabel>
        <relationshipName>Claim_Settled_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Claim Line</label>
    <nameField>
        <label>Claim Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Company</fullName>
        <active>true</active>
        <description>Restrict company to header company</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Accounting_Default__r.Company__c)), Accounting_Default__r.Company__c &lt;&gt; Claim__r.Company__c)</errorConditionFormula>
        <errorDisplayField>Accounting_Default__c</errorDisplayField>
        <errorMessage>The Claim Line company does not match the header company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Amount_Cant_Be_Inverse_Of_Claim</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(Claim__r.Amount__c &gt; 0,Total_Amount__c &lt;=0),AND(Claim__r.Amount__c &lt; 0,Total_Amount__c &gt;=0))</errorConditionFormula>
        <errorDisplayField>Total_Amount__c</errorDisplayField>
        <errorMessage>The total amount on the claim line must have the same sign as the claim amount.</errorMessage>
    </validationRules>
</CustomObject>